dataset1235/2025-2/2318198438/users/3154614172/executions/3334494446_2826299531.log
== SUBMISSION (2025-08-28 00:18:44)
-- CODE: 
valor_compra = float(input())
valor_pago = float(input())
troco = valor_pago - valor_compra
print(troco)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
---- user output:
0.0
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
---- user output:
2.75
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
---- user output:
18.0
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
---- user output:
19.0
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
---- user output:
3.75
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
---- user output:
52.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 00:18:38)
-- CODE: 
valor_compra = float(input())
valor_pago = float(input())
troco = valor_pago - valor_compracompra
print(troco)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valor_compracompra
                         ^^^^^^^^^^^^^^^^^^
NameError: name 'valor_compracompra' is not defined
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valor_compracompra
                         ^^^^^^^^^^^^^^^^^^
NameError: name 'valor_compracompra' is not defined
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valor_compracompra
                         ^^^^^^^^^^^^^^^^^^
NameError: name 'valor_compracompra' is not defined
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valor_compracompra
                         ^^^^^^^^^^^^^^^^^^
NameError: name 'valor_compracompra' is not defined
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valor_compracompra
                         ^^^^^^^^^^^^^^^^^^
NameError: name 'valor_compracompra' is not defined
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valor_compracompra
                         ^^^^^^^^^^^^^^^^^^
NameError: name 'valor_compracompra' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
